deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: busexpress
  labels:
    app.kubernetes.io/part-of: busexpress
