deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: busexpress-ingress
  namespace: busexpress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [api.busexpress.dev]
      secretName: busexpress-tls
  rules:
    - host: api.busexpress.dev
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend: { service: { name: user-service, port: { number: 4001 } } }
          - path: /api/v1/admin
            pathType: Prefix
            backend: { service: { name: user-service, port: { number: 4001 } } }
          - path: /api/v1/search
            pathType: Prefix
            backend: { service: { name: search-service, port: { number: 4002 } } }
          - path: /api/v1/bookings
            pathType: Prefix
            backend: { service: { name: booking-service, port: { number: 4003 } } }
          - path: /api/v1/payments
            pathType: Prefix
            backend: { service: { name: payment-service, port: { number: 4004 } } }
          - path: /api/v1/tickets
            pathType: Prefix
            backend: { service: { name: ticket-service, port: { number: 4005 } } }
          - path: /api/v1/operator
            pathType: Prefix
            backend: { service: { name: operator-service, port: { number: 4007 } } }
          - path: /api/v1/reviews
            pathType: Prefix
            backend: { service: { name: review-service, port: { number: 4008 } } }
          - path: /api/v1/waitlist
            pathType: Prefix
            backend: { service: { name: waitlist-service, port: { number: 4009 } } }
          - path: /api/v1/support
            pathType: Prefix
            backend: { service: { name: support-service, port: { number: 4010 } } }
          - path: /api/v1/reconciliation
            pathType: Prefix
            backend: { service: { name: reconciliation-service, port: { number: 4011 } } }
          - path: /api/v1/audit
            pathType: Prefix
            backend: { service: { name: audit-service, port: { number: 4012 } } }
          - path: /api/v1/gps
            pathType: Prefix
            backend: { service: { name: gps-service, port: { number: 4013 } } }
          - path: /api/v1/ussd
            pathType: Prefix
            backend: { service: { name: ussd-service, port: { number: 4014 } } }
          - path: /api/v1/gateway
            pathType: Prefix
            backend: { service: { name: gateway-service, port: { number: 4000 } } }
